--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
 </head>
 
 <body>
-    <div id="box-container">
-        <p id="about">About</p>
-        <p>Store</p>
-
-
-    </div>
+    
+        <div class="flexbox-container">
+            <div class="flexbox-item flexbox-about"><a href="#">About</a></div>
+            <div class="flexbox-item flexbox-store">Store</div>
+            <div class="flexbox-item flexbox-gmail">Gmail</div>
+            <div class="flexbox-item flexbox-images">Images</div>
+            <div class="flexbox-item flexbox-avatar">Avatar temp</div>
+        </div>
+    
 
     <div id="logo">
         <img src="https://www.google.com/logos/doodles/2015/googles-new-logo-5078286822539264.3-hp2x.gif"
@@ -22,6 +25,11 @@
 
     <div id="searchfield">
         <input type="text">
+    </div>
+    <div id="button-container">
+       <div class="search-button"></div> <button type="submit">Google Search</button>
+        <div class="lucky-button"><button type="submit">I'm Feeling Lucky</button>
+</div>
     </div>
 
 
