--- a/index.html
+++ b/index.html
@@ -3,19 +3,22 @@
 
 <head>
     <link rel="stylesheet" href="style.css">
+    <span class="material-icons-outlined">
+        search
+    </span>
 
 </head>
 
 <body>
-    
-        <div class="flexbox-container">
-            <div class="flexbox-item flexbox-about"><a href="#">About</a></div>
-            <div class="flexbox-item flexbox-store">Store</div>
-            <div class="flexbox-item flexbox-gmail">Gmail</div>
-            <div class="flexbox-item flexbox-images">Images</div>
-            <div class="flexbox-item flexbox-avatar">Avatar temp</div>
-        </div>
-    
+
+    <div class="flexbox-container">
+        <div class="flexbox-item flexbox-about"><a href="#">About</a></div>
+        <div class="flexbox-item flexbox-store">Store</div>
+        <div class="flexbox-item flexbox-gmail">Gmail</div>
+        <div class="flexbox-item flexbox-images">Images</div>
+        <div class="flexbox-item flexbox-avatar list-item-right">Avatar temp</div>
+    </div>
+
 
     <div id="logo">
         <img src="https://www.google.com/logos/doodles/2015/googles-new-logo-5078286822539264.3-hp2x.gif"
@@ -27,11 +30,20 @@
         <input type="text">
     </div>
     <div id="button-container">
-       <div class="search-button"></div> <button type="submit">Google Search</button>
+        <div class="search-button"></div> <button type="submit">Google Search</button>
         <div class="lucky-button"><button type="submit">I'm Feeling Lucky</button>
-</div>
+        </div>
     </div>
-
+    <footer>
+        <nav class="nav-footer">
+            <ul>
+                <li><a href="default.asp">Home</a></li>
+                <li><a href="news.asp">News</a></li>
+                <li."list-item-right"><a href="contact.asp">Contact</a></li>
+                <li class="list-item-right"><a href="about.asp"></li>About</a></li>
+            </ul>
+        </nav>
+    </footer>
 
 
 </body>
